--- a/progetto_ltw/learnMap/learnMap.html
+++ b/progetto_ltw/learnMap/learnMap.html
@@ -13,6 +13,7 @@
 		<!--abbiamo bisogno di jquery per far funzionare ad esempio la navbar-->
 		<!-- notiamo che per far funzionare il tutto ha bisogno di caricare prima jquey e poi bootstrap 
         quindi le funzioni di bootstrap utilizzano in parte jquery-->
+		<script src="learnMap.js"></script>
 	</head>
 
 	<body>
@@ -64,22 +65,29 @@
 						</div>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-							>Disabled</a
+						<a
+							class="nav-link disabled test1"
+							href="#"
+							tabindex="-1"
+							aria-disabled="true"
+							>Abilitabile Raggiunto un certo traguardo (al momento test
+							doppioclick)</a
 						>
 					</li>
 				</ul>
+				<!-- //inutile il search per ora  
 				<form class="form-inline my-2 my-lg-0">
 					<input
 						class="form-control mr-sm-2"
 						type="search"
-						placeholder="Search"
-						aria-label="Search"
+						placeholder="Matematica"
+						aria-label="Cerca"
 					/>
 					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-						Search
+						Cerca
 					</button>
-				</form>
+                </form>
+                -->
 			</div>
 		</nav>
 		<!-- uso emmet per comletare e testare (consiglio l'uso per velocizzare la scrittura di codice)-->
