--- a/progetto_ltw/learnMap/learnMap.html
+++ b/progetto_ltw/learnMap/learnMap.html
@@ -21,8 +21,9 @@
 		<!--js per il collapse della navbar caricato prima-->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 			<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
-			le classi navbar-light/dark e bg-light/dark sono per il tema il primo per -->
-			<a class="navbar-brand" href="#">Navbar</a>
+			le classi navbar-light/dark e bg-light/dark sono per il tema il primo per
+			uso a invece che span per rendere il contenuto interattivo  -->
+			<a class="navbar-brand" href="#">Edu@home</a>
 			<!-- ancora come in questo caso -->
 			<button
 				class="navbar-toggler"
@@ -58,7 +59,7 @@
 							aria-haspopup="true"
 							aria-expanded="false"
 						>
-							Dropdown
+							Settaggi Vari
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="#">Action</a>
@@ -94,81 +95,101 @@
 			</div>
 		</nav>
 		<!-- uso emmet per comletare e testare (consiglio l'uso per velocizzare la scrittura di codice)-->
+		<br /><br /><br />
 
-		<div class="row">
-			<div class="col-4">
-				<div class="list-group" id="list-tab" role="tablist">
-					<a
-						class="list-group-item list-group-item-action active"
-						id="list-home-list"
-						data-toggle="list"
-						href="#list-home"
-						role="tab"
-						aria-controls="home"
-						>Primo</a
-					>
-					<a
-						class="list-group-item list-group-item-action"
-						id="list-profile-list"
-						data-toggle="list"
-						href="#list-profile"
-						role="tab"
-						aria-controls="profile"
-						>Secondo</a
-					>
-					<a
-						class="list-group-item list-group-item-action"
-						id="list-messages-list"
-						data-toggle="list"
-						href="#list-messages"
-						role="tab"
-						aria-controls="messages"
-						>Terzo</a
-					>
-					<a
-						class="list-group-item list-group-item-action"
-						id="list-settings-list"
-						data-toggle="list"
-						href="#list-settings"
-						role="tab"
-						aria-controls="settings"
-						>Quarto</a
-					>
-				</div>
+		<div class="container-xl">
+			<!-- uso il container per fare un resize ottimale del testo  https://getbootstrap.com/docs/4.4/layout/overview/ -->
+			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, incidunt fugiat,
+			libero nesciunt non repellat culpa iste unde corrupti vitae id cumque. Fugit voluptatem
+			debitis magni ex, ab autem totam?
+			<!-- testo di prova emmet-->
+			<div>
+				<button class="materie btn btn-primary">
+					logica
+				</button>
+				<button class="materie btn btn-primary">python</button>
 			</div>
-			<div class="col-8">
-				<div class="tab-content" id="nav-tabContent">
-					<div
-						class="tab-pane fade show active"
-						id="list-home"
-						role="tabpanel"
-						aria-labelledby="list-home-list"
-					>
-						<a href="#">test 1</a>
+			<hr />
+			<div id="zonadinamica">
+				Seleziona la materia
+			</div>
+			<hr />
+			<!-- qui possiamo usare ajax -->
+			<div class="row">
+				<div class="col-4">
+					<div class="list-group" id="list-tab" role="tablist">
+						<a
+							class="list-group-item list-group-item-action active"
+							id="list-home-list"
+							data-toggle="list"
+							href="#list-home"
+							role="tab"
+							aria-controls="home"
+							>Primo</a
+						>
+						<a
+							class="list-group-item list-group-item-action"
+							id="list-profile-list"
+							data-toggle="list"
+							href="#list-profile"
+							role="tab"
+							aria-controls="profile"
+							>Secondo</a
+						>
+						<a
+							class="list-group-item list-group-item-action"
+							id="list-messages-list"
+							data-toggle="list"
+							href="#list-messages"
+							role="tab"
+							aria-controls="messages"
+							>Terzo</a
+						>
+						<a
+							class="list-group-item list-group-item-action"
+							id="list-settings-list"
+							data-toggle="list"
+							href="#list-settings"
+							role="tab"
+							aria-controls="settings"
+							>Quarto</a
+						>
 					</div>
-					<div
-						class="tab-pane fade"
-						id="list-profile"
-						role="tabpanel"
-						aria-labelledby="list-profile-list"
-					>
-						<a href="#" class="fa-apple">test 2</a>
-					</div>
-					<div
-						class="tab-pane fade"
-						id="list-messages"
-						role="tabpanel"
-						aria-labelledby="list-messages-list"
-					>
-						<a href="#">test 3</a>
-					</div>
-					<div
-						class="tab-pane fade"
-						id="list-settings"
-						role="tabpanel"
-						aria-labelledby="list-settings-list"
-					>
-						<a href="http://www.google.it"> Link a sito esterno </a>
+				</div>
+				<div class="col-8">
+					<div class="tab-content" id="nav-tabContent">
+						<div
+							class="tab-pane fade show active"
+							id="list-home"
+							role="tabpanel"
+							aria-labelledby="list-home-list"
+						>
+							<a href="#">test 1</a>
+						</div>
+						<div
+							class="tab-pane fade"
+							id="list-profile"
+							role="tabpanel"
+							aria-labelledby="list-profile-list"
+						>
+							<a href="#" class="fa-apple">test 2</a>
+						</div>
+						<div
+							class="tab-pane fade"
+							id="list-messages"
+							role="tabpanel"
+							aria-labelledby="list-messages-list"
+						>
+							<a href="#">test 3</a>
+						</div>
+						<div
+							class="tab-pane fade"
+							id="list-settings"
+							role="tabpanel"
+							aria-labelledby="list-settings-list"
+						>
+							<a href="http://www.google.it"> Link a sito esterno </a>
+						</div>
 					</div>
 				</div>
 			</div>
