--- a/front/paginaRegistrazione/registrazione.html
+++ b/front/paginaRegistrazione/registrazione.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <fieldset>
-  <form action="/submit.php"  method="post" onsubmit="return CHECK();">
+  <form action="registrazione.php"  method="post" onsubmit="return CHECK();">
 
-    <label class="" for="nome_utente">Nome Utente:</label>
-    <input type="text" name="nome" value="" id="nome_utente">
+    <label class="" for="nick">Nickname:</label>
+    <input type="text" name="nick" value="" id="nick">
 
     <label class="" for="nome">Nome:</label>
     <input type="text" name="nome" value="" id="name">
