--- a/front/moduli/statistica/intro/intro.html
+++ b/front/moduli/statistica/intro/intro.html
@@ -7,8 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Introduzione alla statistica</title>
 		<link rel="stylesheet" href="../../../bootstrap-4.4.1-dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
 		<script src="../../../jQuery/jquery.min.js"></script>
-		<script src="../../../bootstrap-4.4.1-dist/js/bootstrap.min.js" lang="--js"></script>
+		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 		<style>
 			body {
 			  background-image: url('../art.jpg');
@@ -48,7 +49,7 @@
 						<a
 							id="home"
 							class="nav-link"
-							href="/ProgettoWeb/front/learnMap/learnMap.html"
+							href="../../../learnMap/learnMap.html"
 							>Home <span class="sr-only">(current)</span></a
 						>
 					</li>
