--- a/front/learnMap/materie/statistica.html
+++ b/front/learnMap/materie/statistica.html
@@ -22,9 +22,7 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<a
-						href="http://127.0.0.1:5500/ProgettoWeb/front/moduli/statistica/intro/intro.html"
-					>
+					<a href="../moduli/statistica/intro/intro.html">
 						<img
 							src="materie/introStatistica.jpg"
 							width="auto"
