--- a/front/learnMap/learnMap.html
+++ b/front/learnMap/learnMap.html
@@ -15,10 +15,8 @@
         quindi le funzioni di bootstrap utilizzano in parte jquery-->
 		<script src="learnMap.js"></script>
 	</head>
-	<body
-		style="background-image: url('The_Kiss.jpg'); background-size: cover;"
-		onload="assegnaEventHandlers();"
-	>
+	<!-- style="background-image: url('The_Kiss.jpg'); background-size: cover;" -->
+	<body onload="assegnaEventHandlers();">
 		<a href="http://www.google.it"> </a>
 		<div class="contenuto"></div>
 		<a href="http://www.google.it"> </a>
