--- a/front/learnMap/materie/statistica.html
+++ b/front/learnMap/materie/statistica.html
@@ -8,7 +8,7 @@
 		<title>Document</title>
 		<style>
 			.bg-text {
-				background-color: rgba(0, 0, 0, 0.4);
+				background-color: rgba(0, 0, 0, 0.5);
 			}
 		</style>
 	</head>
@@ -31,8 +31,8 @@
 							alt="..."
 					/></a>
 					<div class="carousel-caption d-none d-md-block text-light bg-text">
-						<h5>Principiante/tipologia</h5>
-						<p>cosa si può fare nella fase 2?</p>
+						<h5>Introduzione</h5>
+						<p>Un introduzione generale alla statistica e alla sua storia</p>
 					</div>
 				</div>
 				<div class="carousel-item">
