--- a/front/learnMap/materie/logica.html
+++ b/front/learnMap/materie/logica.html
@@ -6,6 +6,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<style>
+			img {
+				background-size: cover;
+				height: 500px;
+			}
+		</style>
 	</head>
 	<body>
 		Carosello moduli logica con link alle pagine dei moduli
