--- a/front/learnMap/materie/statistica.html
+++ b/front/learnMap/materie/statistica.html
@@ -11,6 +11,16 @@
 				background-color: rgba(0, 0, 0, 0.5);
 			}
 		</style>
+		<link rel="stylesheet" href="../../assets/css/bootstrap.css" />
+		<link rel="stylesheet" href="../../assets/css/home-made.css" />
+		<script src="../../jQuery/jquery.min.js"></script>
+		<script src="../../assets/js/bootstrap.js" lang="--js"></script>
+		<style>
+			img {
+				background-size: cover;
+				height: 500px;
+			}
+		</style>
 	</head>
 	<body>
 		Carosello moduli statistica con link alle pagine dei moduli (funziona solo il primo)
@@ -25,8 +35,7 @@
 					<a href="../moduli/statistica/intro/intro.html">
 						<img
 							src="materie/introStatistica.jpg"
-							width="auto"
-							height="402"
+							height="500px"
 							class="d-block w-100"
 							alt="..."
 					/></a>
@@ -36,26 +45,21 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img
-						src="materie/img2.jpeg"
-						width="42"
-						height="402"
-						class="d-block w-100"
-						alt="..."
-					/>
+					<a href="../moduli/statistica/base/base.html">
+						<img
+							src="materie/basestatistica.png"
+							height="500px"
+							class="d-block w-100"
+							alt="..."
+						/>
+					</a>
 					<div class="carousel-caption d-none d-md-block">
 						<h5>intermedio</h5>
 						<p>paragrafo per spiegare o boh non so</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img
-						src="materie/img3.jpg"
-						width="42"
-						height="402"
-						class="d-block w-100"
-						alt="..."
-					/>
+					<img src="materie/img3.jpg" height="500px" class="d-block w-100" alt="..." />
 					<div class="carousel-caption d-none d-md-block">
 						<h5>avanzato</h5>
 						<p>magna meno e vivi meglio</p>
