--- a/front/learnMap/materie/statistica.html
+++ b/front/learnMap/materie/statistica.html
@@ -7,6 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<style>
+			img {
+				background-size: cover;
+				height: 500px;
+			}
 			.bg-text {
 				background-color: rgba(0, 0, 0, 0.5);
 			}
@@ -53,14 +57,14 @@
 							alt="..."
 						/>
 					</a>
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption d-none d-md-block text-light bg-text">
 						<h5>intermedio</h5>
 						<p>paragrafo per spiegare o boh non so</p>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<img src="materie/img3.jpg" height="500px" class="d-block w-100" alt="..." />
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption d-none d-md-block text-light bg-text">
 						<h5>avanzato</h5>
 						<p>magna meno e vivi meglio</p>
 					</div>
