--- a/front/learnMap/learnMap.html
+++ b/front/learnMap/learnMap.html
@@ -7,9 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<!-- uso di bootstrap self hosted-->
-		<link rel="stylesheet" href="../bootstrap-4.4.1-dist/css/bootstrap.min.css" />
-		<script src="../jQuery/jquery.min.js"></script>
-		<script src="../bootstrap-4.4.1-dist/js/bootstrap.min.js" lang="--js"></script>
+		<link rel="shortcut icon" href="../../../favicon.ico" />
+		<link rel="stylesheet" href="../assets/css/bootstrap.css" />
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/bootstrap.js" lang="--js"></script>
 		<!--abbiamo bisogno di jquery per far funzionare ad esempio la navbar-->
 		<!-- notiamo che per far funzionare il tutto ha bisogno di caricare prima jquey e poi bootstrap 
         quindi le funzioni di bootstrap utilizzano in parte jquery-->
