--- a/front/moduli/statistica/base/base.html
+++ b/front/moduli/statistica/base/base.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Elementi di statistica</title>
+		<link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../../../bootstrap-4.4.1-dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
 		<script src="../../../jQuery/jquery.min.js"></script>
