--- a/front/moduli/statistica/intro/introtest.html
+++ b/front/moduli/statistica/intro/introtest.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="shortcut icon" href="../../../favicon.ico" />
 		<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
 		<script src="../../../assets/js/jquery.min.js"></script>
