learn map images

--- a/front/learnMap/materie/statistica.html
+++ b/front/learnMap/materie/statistica.html
@@ -58,14 +58,14 @@
 						/>
 					</a>
 					<div class="carousel-caption d-none d-md-block text-light bg-text">
-						<h5>intermedio</h5>
-						<p>paragrafo per spiegare o boh non so</p>
+						<h5>Base</h5>
+						<p>Un primo approccio all'uso nella vita comune</p>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<img src="materie/img3.jpg" height="500px" class="d-block w-100" alt="..." />
 					<div class="carousel-caption d-none d-md-block text-light bg-text">
-						<h5>avanzato</h5>
+						<h5>Formule!</h5>
 						<p>magna meno e vivi meglio</p>
 					</div>
 				</div>
