--- a/front/learnMap/materie/logica.html
+++ b/front/learnMap/materie/logica.html
@@ -10,6 +10,11 @@
 			img {
 				background-size: cover;
 				height: 500px;
+				overflow: hidden;
+				margin: 0px;
+			}
+			.bg-text {
+				background-color: rgba(0, 0, 0, 0.5);
 			}
 		</style>
 	</head>
@@ -24,26 +29,26 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img
-						src="materie/img1.jpg"
+						src="materie/logica1.jpg"
 						width="42"
 						height="402"
 						class="d-block w-100"
 						alt="..."
 					/>
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption d-none d-md-block bg-text">
 						<h5>Principiante/tipologia</h5>
 						<p>cosa si può fare nella fase 2?</p>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<img
-						src="materie/img2.jpeg"
+						src="materie/logica2.png"
 						width="42"
 						height="402"
 						class="d-block w-100"
 						alt="..."
 					/>
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption d-none d-md-block bg-text">
 						<h5>intermedio</h5>
 						<p>paragrafo per spiegare o boh non so</p>
 					</div>
@@ -56,7 +61,7 @@
 						class="d-block w-100"
 						alt="..."
 					/>
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption d-none d-md-block bg-text">
 						<h5>avanzato</h5>
 						<p>magna meno e vivi meglio</p>
 					</div>
