--- a/front/learnMap/materie/python.html
+++ b/front/learnMap/materie/python.html
@@ -11,6 +11,9 @@
 				background-size: cover;
 				height: 500px;
 			}
+			.bg-text {
+				background-color: rgba(0, 0, 0, 0.5);
+			}
 		</style>
 	</head>
 	<body>
@@ -24,21 +27,21 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="materie/img3.jpg" class="d-block w-100" />
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption d-none d-md-block bg-text">
 						<h5>First slide label</h5>
 						<a href="http://www.google.it">roba a cazzo che non so</a>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<img src="materie/img2.jpeg" class="d-block w-100" />
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption d-none d-md-block bg-text">
 						<h5>Second slide label</h5>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<img src="materie/img1.jpg" class="d-block w-100" />
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption d-none d-md-block bg-text">
 						<h5>Third slide label</h5>
 						<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
 					</div>
