--- a/front/paginaLogin/login.html
+++ b/front/paginaLogin/login.html
@@ -16,16 +16,13 @@
         <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-            crossorigin="anonymous"
         />
 
         <!--Fontawesome -->
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-            crossorigin="anonymous"
+            
         />
 
         <!--stile-->
@@ -39,23 +36,25 @@
                         <h3>Log in</h3>
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form
+                        action="checkLogin.php"
+				        class="form-signin"
+				        method="POST">
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"
                                         ><i class="fas fa-user"></i
                                     ></span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="username" />
+                                <input type="email" class="form-control" placeholder="email"  name="email" required/>
                             </div>
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-key"></i></span>
                                 </div>
                                 <input
-                                    type="password"
-                                    class="form-control"
-                                    placeholder="password"
+                                    type="password" class="form-control" placeholder="password" name="password" required
+                                                                        
                                 />
                             </div>
                             <div class="row align-items-center remember">
@@ -70,6 +69,7 @@
                                     type="submit"
                                     value="Login"
                                     class="btn float-right login_btn"
+                                    name="Login"
                                 />
                             </div>
                         </form>
