nuovo login.php

--- a/front/paginaLogin/login.html
+++ b/front/paginaLogin/login.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="card-body">
                         <form
-                        action="checkLogin.php"
+                        action="checkLogin2.php"
 				        class="form-signin"
 				        method="POST">
                             <div class="input-group form-group">
@@ -76,7 +76,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="d-flex justify-content-center links">
-                            non hai un account??<a href="#">Registrati</a>
+                            non hai un account??<a href="../paginaRegistrazione/registrazione.html">Registrati</a>
                         </div>
                         <div class="d-flex justify-content-center">
                             <a href="#">Dimenticato la password?</a>
