--- a/front/snake/snake.html
+++ b/front/snake/snake.html
@@ -32,14 +32,15 @@ var snake = {
   x: 160,
   y: 160,
   
-  // snake velocity. moves one grid length every frame in either the x or y direction
+ 
+  //velocità, movimento
   dx: grid,
   dy: 0,
   
-  // keep track of all grids the snake body occupies
+  // tiene traccia delle griglie occupate sta snake
   cells: [],
   
-  // length of the snake. grows when eating an apple
+  // lunghezza+crescita
   maxCells: 4
 };
 var apple = {
@@ -47,17 +48,17 @@ var apple = {
   y: 320
 };
 
-// get random whole numbers in a specific range
-// @see https://stackoverflow.com/a/1527820/2124254
+// https://stackoverflow.com/a/1527820/2124254
+
 function getRandomInt(min, max) {
   return Math.floor(Math.random() * (max - min)) + min;
 }
 
-// game loop
+// loop
 function loop() {
   requestAnimationFrame(loop);
 
-  // slow game loop to 15 fps instead of 60 (60/15 = 4)
+  // diminuisci fps a 15 60 (60/15 = 4)
   if (++count < 4) {
     return;
   }
@@ -65,7 +66,7 @@ function loop() {
   count = 0;
   context.clearRect(0,0,canvas.width,canvas.height);
 
-  // move snake by it's velocity
+  // +movimento
   snake.x += snake.dx;
   snake.y += snake.dy;
 
@@ -85,38 +86,38 @@ function loop() {
     snake.y = 0;
   }
 
-  // keep track of where snake has been. front of the array is always the head
+  // traccia snake
   snake.cells.unshift({x: snake.x, y: snake.y});
 
-  // remove cells as we move away from them
+  // pulisci celle dopo essersi spostati
   if (snake.cells.length > snake.maxCells) {
     snake.cells.pop();
   }
 
-  // draw apple
+  // disegno frutto
   context.fillStyle = 'red';
   context.fillRect(apple.x, apple.y, grid-1, grid-1);
 
-  // draw snake one cell at a time
+  // disegno snake
   context.fillStyle = 'green';
   snake.cells.forEach(function(cell, index) {
     
-    // drawing 1 px smaller than the grid creates a grid effect in the snake body so you can see how long it is
+    // 
     context.fillRect(cell.x, cell.y, grid-1, grid-1);  
 
-    // snake ate apple
+    // mangia la mela >>
     if (cell.x === apple.x && cell.y === apple.y) {
       snake.maxCells++;
 
-      // canvas is 400x400 which is 25x25 grids 
+      // 25x25 in canvas è 400x400
       apple.x = getRandomInt(0, 25) * grid;
       apple.y = getRandomInt(0, 25) * grid;
     }
 
-    // check collision with all cells after this one (modified bubble sort)
+   
     for (var i = index + 1; i < snake.cells.length; i++) {
       
-      // snake occupies same space as a body part. reset game
+      // reset in caso morte
       if (cell.x === snake.cells[i].x && cell.y === snake.cells[i].y) {
         snake.x = 160;
         snake.y = 160;
@@ -134,34 +135,31 @@ function loop() {
 
 // listen to keyboard events to move the snake
 document.addEventListener('keydown', function(e) {
-  // prevent snake from backtracking on itself by checking that it's 
-  // not already moving on the same axis (pressing left while moving
-  // left won't do anything, and pressing right while moving left
-  // shouldn't let you collide with your own body)
+
   
-  // left arrow key
+  // sinistra
   if (e.which === 37 && snake.dx === 0) {
     snake.dx = -grid;
     snake.dy = 0;
   }
-  // up arrow key
+  // si
   else if (e.which === 38 && snake.dy === 0) {
     snake.dy = -grid;
     snake.dx = 0;
   }
-  // right arrow key
+  // destra
   else if (e.which === 39 && snake.dx === 0) {
     snake.dx = grid;
     snake.dy = 0;
   }
-  // down arrow key
+  // giù
   else if (e.which === 40 && snake.dy === 0) {
     snake.dy = grid;
     snake.dx = 0;
   }
 });
 
-// start the game
+// inizio
 requestAnimationFrame(loop);
 </script>
 </body>
