--- a/front/moduli/statistica/base/basetest.html
+++ b/front/moduli/statistica/base/basetest.html
@@ -1,10 +1,11 @@
 <!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Test Base</title>
 		<link rel="shortcut icon" href="../../../favicon.ico" />
 		<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
@@ -12,13 +13,13 @@
 		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 		<style>
 			body {
-				background-image: url(../art.jpg);
+				background-image: url(../art2.jpg);
 				background-repeat: no-repeat;
 				background-attachment: fixed;
 				background-size: cover;
 			}
 		</style>
-		<script type="text/javascript" src="introtest.js"></script>
+		<script type="text/javascript" src="basetest.js"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -97,96 +98,70 @@
 			</div>
 		</nav>
 		<br /><br /><br />
-		<div class="container-xl text-monospace bg-blur">
-			<h1>Concentrati!</h1>
-			Questo è il primo test di statistica, non preoccuparti se ora va male!
-			<br /><br />
-			<!--cambiare poi in post-->
-			<form action="introtest.php" method="POST" onsubmit="return verifica();">
-				<div class="row">
-					<div class="col-3">
-						<div class="list-group" id="list-tab" role="tablist">
-							<a
-								class="list-group-item list-group-item-action active"
-								id="list-primad"
-								data-toggle="list"
-								href="#primad"
-								role="tab"
-								aria-controls="home"
-								>Prima</a
-							>
-							<a
-								class="list-group-item list-group-item-action"
-								id="list-secondad"
-								data-toggle="list"
-								href="#secondad"
-								role="tab"
-								aria-controls="profile"
-								>Seconda</a
-							>
-							<a
-								class="list-group-item list-group-item-action"
-								id="list-terzad"
-								data-toggle="list"
-								href="#terzad"
-								role="tab"
-								aria-controls="messages"
-								>Terza</a
-							>
-							<a
-								class="list-group-item list-group-item-action"
-								id="list-quartad"
-								data-toggle="list"
-								href="#quartad"
-								role="tab"
-								>Quarta</a
-							>
-						</div>
-					</div>
-					<div class="col-8 bg-more-blur rounded-lg">
-						<div class="tab-content" id="nav-tabContent">
-							<div class="tab-pane fade show active" id="primad" role="tabpanel">
-								Quale popolazione ha per prima iniziato a censire i beni?
-								<br />
-								<input type="radio" class="col-1" name="intro1" id="ebrei" />Ebrei
-								<input type="radio" class="col-1" name="intro1" id="egizi" />Egizi
-								<input
-									type="radio"
-									class="col-1"
-									name="intro1"
-									id="romani"
-								/>Romani<input
-									type="radio"
-									class="col-1"
-									name="intro1"
-									id="babilonesi"
-								/>babilonesi
-							</div>
-							<div class="tab-pane fade" id="secondad" role="tabpanel">
-								<span
-									>Come si chiama il libro che racconta il censimento degli
-									ebrei?</span
-								>
-								<input type="text" name="libro" id="libro" />
-							</div>
-							<div class="tab-pane fade" id="terzad" role="tabpanel">
-								<a align="center" href="#">TODO!!</a>
-							</div>
-							<div class="tab-pane fade" id="quartad" role="tabpanel">
-								<a href="http://www.google.it"> Link a sito esterno </a>
-							</div>
-						</div>
-					</div>
+		<div class="container bg-blur">
+			<nav>
+				<div class="nav nav-tabs" id="nav-tab" role="tablist">
+					<a
+						class="nav-item nav-link active"
+						id="nav-primo-tab"
+						data-toggle="tab"
+						href="#nav-primo"
+						role="tab"
+						aria-controls="nav-primo"
+						aria-selected="true"
+						>Primo</a
+					>
+					<a
+						class="nav-item nav-link"
+						id="nav-secondo-tab"
+						data-toggle="tab"
+						href="#nav-secondo"
+						role="tab"
+						aria-controls="nav-secondo"
+						aria-selected="false"
+						>Secondo</a
+					>
+					<a
+						class="nav-item nav-link"
+						id="nav-terzo-tab"
+						data-toggle="tab"
+						href="#nav-terzo"
+						role="tab"
+						aria-controls="nav-terzo"
+						aria-selected="false"
+						>Terzo</a
+					>
 				</div>
-				<p align="center" class="col-10">
-					<br />
-					<button type="submit" class="btn btn-primary">
-						Controlla!
-					</button>
-					<br />
-					<br />
-				</p>
-			</form>
+			</nav>
+			<div class="tab-content" id="nav-tabContent">
+				<div
+					class="tab-pane fade show active"
+					id="nav-primo"
+					role="tabpanel"
+					aria-labelledby="nav-primo-tab"
+				>
+					...
+					<br /><br /><br /><br /><br /><br /><br /><br /><br />
+				</div>
+				<div
+					class="tab-pane fade"
+					id="nav-secondo"
+					role="tabpanel"
+					aria-labelledby="nav-secondo-tab"
+				>
+					...
+					<br /><br /><br /><br /><br /><br /><br /><br /><br />
+				</div>
+				<div
+					class="tab-pane fade"
+					id="nav-terzo"
+					role="tabpanel"
+					aria-labelledby="nav-terzo-tab"
+				>
+					...
+					<br /><br /><br /><br /><br /><br /><br /><br /><br />
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
