--- a/front/moduli/statistica/base/basetest.html
+++ b/front/moduli/statistica/base/basetest.html
@@ -98,7 +98,7 @@
 			</div>
 		</nav>
 		<br /><br /><br />
-		<div class="container bg-blur">
+		<div class="container bg-blur text-monospace">
 			<nav>
 				<div class="nav nav-tabs" id="nav-tab" role="tablist">
 					<a
@@ -135,31 +135,75 @@
 			</nav>
 			<div class="tab-content" id="nav-tabContent">
 				<div
-					class="tab-pane fade show active"
+					class="tab-pane fade show active bg-more-blur"
 					id="nav-primo"
 					role="tabpanel"
 					aria-labelledby="nav-primo-tab"
 				>
-					...
-					<br /><br /><br /><br /><br /><br /><br /><br /><br />
+					Cosa si intende per scienza?
+					<br />
+					<div class="list-group">
+						<button type="button" class="list-group-item list-group-item-action">
+							Un sistema di conoscenze ottenute attraverso un'attività di ricerca
+							prevalentemente organizzata con procedimenti metodici e rigorosi,
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							Lo studio dei vulcani
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							Lo studio delle particelle elementari
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							Conoscenze basate su ipotesi
+						</button>
+					</div>
 				</div>
 				<div
-					class="tab-pane fade"
+					class="tab-pane fade bg-more-blur"
 					id="nav-secondo"
 					role="tabpanel"
 					aria-labelledby="nav-secondo-tab"
 				>
-					...
-					<br /><br /><br /><br /><br /><br /><br /><br /><br />
+					Come si ottiene la media?
+					<br />
+					<div class="list-group">
+						<button type="button" class="list-group-item list-group-item-action">
+							Somma dei numeri
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							è la quantità di numeri sommati
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							sottraendo e sommando i numeri in modo alternato
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							Sommando tutti i numeri e dividendo per la quantità di essi
+						</button>
+					</div>
 				</div>
 				<div
-					class="tab-pane fade"
+					class="tab-pane fade bg-more-blur"
 					id="nav-terzo"
 					role="tabpanel"
 					aria-labelledby="nav-terzo-tab"
 				>
-					...
-					<br /><br /><br /><br /><br /><br /><br /><br /><br />
+					Quale è la media tra 5 e 15?
+					<br />
+					<br />
+					<div class="list-group">
+						<button type="button" class="list-group-item list-group-item-action">
+							12
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							20
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							10
+						</button>
+						<button type="button" class="list-group-item list-group-item-action">
+							5
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
